--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,8 @@
 @import "tailwindcss";
 @plugin "daisyui";
+
+@theme {
+  --color-mustard-yellow: #f8c32c;
+  --color-forest: #0d401c;
+  --color-heading: #072010;
+}
