--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 
 @theme {
   --color-mustard-yellow: #f8c32c;
-  --color-forest: #0d401c;
+  --color-agro-green: #38a030;
   --color-heading: #072010;
   --color-new-heading: #8fc638;
 }
