--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ body {
 }
 
 .hero-overlay {
-  padding: 80px;
+  padding: 120px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -60,9 +60,9 @@ body {
   background-size: cover;
   background-position: center;
   position: absolute;
-  top: -25px;
+  top: -9px;
   width: 100%;
-  height: 15px; /* Adjust height as needed */
+  height: 15px;
   z-index: 10;
 }
 
@@ -105,9 +105,9 @@ body {
 /* Ensure text is above the overlay */
 .tagline-img h2 {
   position: relative;
-  z-index: 2; /* Place text above the overlay */
-  padding: 20px; /* Add padding for better readability */
-  text-align: center; /* Center-align text */
+  z-index: 2;
+  padding: 20px;
+  text-align: center;
 }
 
 @media (min-width: 808px) and (max-width: 1024px) {
@@ -123,3 +123,7 @@ body {
 }
 
 /* ANIMATIONS */
+.swiper-button-prev-custom,
+.swiper-button-next-custom {
+  z-index: 50 !important;
+}
